--- a/css/blogs.css
+++ b/css/blogs.css
@@ -6,8 +6,8 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: white;
     height: 100%;
-    position: relative;
     box-sizing: border-box;
+    padding-bottom: 5vh;
 }
 
 .container {
@@ -15,17 +15,6 @@ body {
     margin-left: auto;
     max-width: 1200px;
     width: 80%;
-}
-
-.home-container {
-    display: grid;
-    grid-template-rows: 5% 90% 5%;
-    grid-template-areas: "header"
-                         "blogs-main"
-                         "footer";
-    justify-items: center;
-    height: 100%;
-    gap: 0.1em;
 }
 
 h2,
@@ -41,48 +30,17 @@ a {
 }
 
 header {
-    grid-area: header;
     max-width: 1200px;
     width: 100%;
-    height: 20%;
-    display: grid;
-    grid-template-rows: 1fr 2fr;
+    height: 10vh;
     margin-right: auto;
     margin-left: auto;
-}
-
-.icons-container {
-position: fixed;
-top: 35%;
-}
-
-.icons-container .icons {
-display: grid;
-grid-template-rows: repeat(5, 1fr);
-font-size: 35px;
-gap: 10px;
-}
-
-.icon-item {
-    color: #fff;
-}
-
-.tab {
-    padding: 5px 10px;
-    background: linear-gradient(to left, rgb(72, 207, 173) 0%, rgb(67, 69, 112) 100%);
-    backdrop-filter: saturate(180%) blur(20px);
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-}
-
-.tab:hover {
-    box-shadow: 0 0 8px 0 #48CFAD;
 }
 
 .nav-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 20%;
+    height: 10vh;
     align-items: center;
     justify-content: space-between;    
 }
@@ -114,7 +72,6 @@ gap: 10px;
 }
 
 .blogs-main {
-    grid-area: blogs-main;
     display: grid;
     width: 100%;
     grid-template-rows: auto 75%;
@@ -130,6 +87,7 @@ gap: 10px;
     grid-template: 10% 90% / 1fr 1fr;
     grid-template-areas: "title-container ."
                          "featured-img featured-text";
+    gap: 1em;
 }
 
 .title-container {
@@ -141,7 +99,8 @@ gap: 10px;
 }
 
 .featured-img-container {
-    grid-area: featured-img
+    grid-area: featured-img;
+    justify-items: center;
 }
 
 .featured-img-container img {
@@ -160,29 +119,43 @@ gap: 10px;
     grid-area: posts;
 }
 
-.blogs-posts h3 {
-    border-bottom: 1px solid tomato;  
+.title-posts {
+    margin-bottom: 1em;
+}
+
+.title-posts h3 {  
     padding: 1em 0;
     text-align: center;  
+    border-bottom: 2px solid tomato;
+}
+
+.blogs-posts {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 30%);
+    gap: 1em;
+    justify-content: center;
+    align-content: center;
 }
 
 .blogs-button {
     border: 1px solid #48CFAD;
     border-radius: 10px;
     padding: 10px 15px;
+    margin: 5px;
+    display: inline-block;
     background-color: #48CFAD;
-    font-size: 12px;
+    font-size: 0.9em;
 }
 
 .post-container {
     display: inline-block;
-    padding: 5px;
-    max-width: 30%;
-    margin-bottom: 50px;
+    max-width: 300px;
 }
 
 .post-container p {
-    margin-bottom: 35px;
+    padding: 0.3em;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 .post-container img {
@@ -190,16 +163,54 @@ gap: 10px;
 }
 
 .footer {
-    grid-area: footer;
     background-color: black;
     border-top: 7px solid #48CFAD;
     width: 100%;
-    height: auto;
+    height: 5vh;
     position: fixed;
     bottom: 0;
-    left: 0;
 }
 
+.footer p {
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font: 0.7em sans-serif;
+    margin: 0;
+    padding: 0.7em;
+}
+
+/*Íconos de redes sociales del costado*/
+.icons-container {
+    position: fixed;
+    top: 35%;
+    }
+    
+    .icons-container .icons {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    font-size: 35px;
+    gap: 10px;
+    }
+    
+    .icon-item {
+        color: #fff;
+    }
+    
+    .tab {
+        padding: 5px 10px;
+        background: linear-gradient(to left, rgb(72, 207, 173) 0%, rgb(67, 69, 112) 100%);
+        backdrop-filter: saturate(180%) blur(20px);
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+    }
+    
+    .tab:hover {
+        box-shadow: 0 0 8px 0 #48CFAD;
+    }
+
+
+/*Íconos de redes sociales en pie de página*/
 .footer-icons {
     text-align: center;
     padding: 0.3em 0;
@@ -211,14 +222,7 @@ gap: 10px;
     margin: 0 0.3em;
 }
 
-.footer p {
-    text-align: center;
-    color: #fff;
-    text-transform: uppercase;
-    font: 0.7em sans-serif;
-    margin: 0;
-    padding: 0.7em;
-}
+
 
 @media only screen and (max-width: 1024px) {
 
