--- a/css/blogs.css
+++ b/css/blogs.css
@@ -292,6 +292,10 @@ header {
         grid-template-columns: repeat(auto-fill, 100%);
     }
 
+    .blogs-main {
+        grid-template-rows: auto auto;
+    }
+
     .post-container {
         max-width: 350px;
         padding: 5%;
