--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+/*
+.....................................
+..  _______________________________..
+. /   ______/   _______/   _______/..
+./   /      (______    \ ______   \ .
+.\   \______  _____/   / _____/   /..
+..\________//_________//_________/...
+.....................................
+......Por Cyn Romero (Ce-y-Ene)......
+ */
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
 
 html, 
