--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,13 @@
+/*
+......................___......__..___.........
+...__...__.....____../  /_....(__)/  /____.....
+../  __  __  \/ __ \/  /_  \./  //  // __  )...
+./  / /./ / ./ /_/ /  /_/  //  //  /( (_/ /_ ..
+/__/ /_/ /__/_____/\_____ //__//___/ \______)..
+............................................
+..........Por Cyn Romero (Ce-y-Ene).........
+ */
+
 /* Media Queries*/
 @media only screen and (max-width: 1024px) {
 
